...
                                <rect key="frame" x="69.5" y="334" width="245" height="70"/>
                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="DkF-9u-9Xy" secondAttribute="height" multiplier="3.5:1" id="AUB-Td-Ylq"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                <state key="normal" title="Start New Project">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="startProject:" destination="ueC-M8-gXi" eventType="touchUpInside" id="XTw-g5-ZLH"/>
                                </connections>
                            </button>
...
                                        <rect key="frame" x="92.5" y="264" width="184.5" height="61.5"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="mT0-HJ-NaA" secondAttribute="height" multiplier="3:1" id="rQV-iY-c7Q"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="50"/>
                                        <state key="normal" title="Start">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="createProject:" destination="ueC-M8-gXi" eventType="touchUpInside" id="FTR-Go-hag"/>
                                        </connections>
                                    </button>
...
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="cancelStartProject:" destination="ueC-M8-gXi" eventType="touchUpInside" id="MCl-Pj-bLx"/>
                                        </connections>
                                    </button>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Project Title" textAlignment="natural" clearsOnBeginEditing="YES" adjustsFontForContentSizeCategory="YES" minimumFontSize="15" clearButtonMode="whileEditing" translatesAutoresizingMaskInto
                                        <rect key="frame" x="77" y="149.5" width="461" height="69"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="thl-m6-8Vw" secondAttribute="height" multiplier="40:6" id="4I7-xM-dMt"/>
                                        </constraints>
                                        <nil key="textColor"/>
...
                                    <constraint firstAttribute="width" secondItem="aFa-DB-79J" secondAttribute="height" multiplier="1:1" id="FOt-bj-MDG"/>
                                </constraints>
                                <color key="color" red="0.0" green="0.094606803700000006" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            </activityIndicatorView>
                            <imageView hidden="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oC9-YJ-yGS">
                                <rect key="frame" x="39" y="168" width="691" height="587.5"/>
                                <accessibility key="accessibilityConfiguration" label="Photo of Cards">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="clip" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fB1-2o-fwd">
                                <rect key="frame" x="243.5" y="168" width="282.5" height="193.5"/>
                                <string key="text">Add A Photo Of Cards
...
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2qb-cf-lUO">
                                <rect key="frame" x="403" y="371.5" width="307.5" height="76.5"/>
                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                <state key="normal" title="Load Photo">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="photolibraryaction:" destination="9pv-A4-QxB" eventType="touchUpInside" id="Jhd-IR-2h9"/>
                                </connections>
                            </button>
...
                                </connections>
                            </button>
                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lyo-uf-VfJ">
                                <rect key="frame" x="417" y="841" width="280" height="56"/>
                                <color key="backgroundColor" red="0.014507189130000001" green="0.60684504530000005" blue="0.001450365028" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                <state key="normal" title="Use Photo">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                    <color key="titleShadowColor" red="0.0" green="0.044991018683365525" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="processPhoto:" destination="9pv-A4-QxB" eventType="touchUpInside" id="ejQ-W7-wdc"/>
                                </connections>
...
